--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -1,12 +1,20 @@
 find_package(fmt CONFIG REQUIRED)
 
+include(Sources.cmake)
+
 add_library(lib
     STATIC
-    lib.cpp
 )
 
+add_sources_to_target(lib)
+
 target_include_directories(lib PUBLIC
-    ${CMAKE_CURRENT_SOURCE_DIR}
+    ${CMAKE_CURRENT_SOURCE_DIR}/include
+)
+
+target_include_directories(lib PRIVATE
+    ${CMAKE_CURRENT_SOURCE_DIR}/include/lib
+    ${CMAKE_CURRENT_SOURCE_DIR}/src
 )
 
 target_link_libraries(lib PRIVATE
