--- a/docs/Doxyfile.in
+++ b/docs/Doxyfile.in
@@ -1,2 +1,4 @@
-OUTPUT_DIRECTORY       = @CMAKE_CURRENT_BINARY_DIR@/doc_doxygen/
-INPUT                  = @CMAKE_CURRENT_SOURCE_DIR@/src @CMAKE_CURRENT_SOURCE_DIR@/doc
+PROJECT_NAME            = @PROJECT_NAME@
+OUTPUT_DIRECTORY        = @CMAKE_CURRENT_BINARY_DIR@/doc_doxygen/
+INPUT                   = @CMAKE_CURRENT_SOURCE_DIR@/src @CMAKE_CURRENT_SOURCE_DIR@/docs
+RECURSIVE               = YES
